Проблема с запуском приложения, поменяна версия spring, открыл токен

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
-#telegram.bot.token=5885352732:AAE1GoXtCSWe25r9dJ5y3Sfl6e2IrUU3J4Y
+telegram.bot.token=5885352732:AAE1GoXtCSWe25r9dJ5y3Sfl6e2IrUU3J4Y
 logging.level.com.example.telegrambot=info
 
 
 spring.datasource.url=jdbc:postgresql://localhost/postgres
 spring.datasource.username=postgres
 spring.datasource.password=prikol
-spring.jpa.hibernate.ddl-auto=update
-spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+spring.jpa.hibernate.ddl-auto=validate
 
