Выполнены тесты на запросы

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.username=postgres
 spring.datasource.password=prikol
 spring.jpa.hibernate.ddl-auto=validate
 
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+
